--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,7 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
   database: yelp_development
 
   # The specified database role being used to connect to postgres.
@@ -58,6 +59,7 @@ development:
 test:
   <<: *default
   database: yelp_test
+  host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
